# coffeetech_notifications_service

./: Dockerfile  MIGRATION_COMPLETED.md  MIGRATION_GUIDE.md  NOTIFICATION_ENTITY_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: deploy.yml
adapters/: invitation_client.py  user_client.py
adapters/http/: __init__.py  user_service_adapter.py
adapters/persistence/: notification_repository.py
domain/: schemas.py
domain/entities/: README.md  __init__.py  notification.py  notification_mapper.py
domain/repositories/: notification_repository.py
domain/services/: notification_service.py
endpoints/: __init__.py  devices.py  notifications.py  notifications_server.py  notifications_service.py
endpoints/internal/: __init__.py  notifications_internal.py
models/: models.py
tests/: conftest.py  run_fcm_tests.py  test_notification_entity.py  test_notification_service.py  test_send_fcm_notification.py
tests/domain/entities/: test_notification_entity.py
tests/domain/repositories/: test_notification_repository.py
tests/domain/services/: test_notification_service.py
tests/use_cases/: test_get_notifications_use_case.py
tests/utils/: test_send_fcm_notification.py
use_cases/: devices.py  get_notifications_use_case.py  notifications.py  register_device_use_case.py  verify_session_token_use_case.py
utils/: logger.py  register_device.py  response.py  send_fcm_notification.py
