[project]
name = "notifications-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "firebase-admin>=6.8.0",
    "httpx>=0.28.1",
    "orjson>=3.10.16",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]
