[project]
name = "notifications-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "firebase-admin>=6.8.0",
    "httpx>=0.28.1",
    "orjson>=3.10.16",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.3",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-json-report==1.5.0",
    "pytest-metadata==3.1.1",
    "pytest-mock==3.14.0",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["domain", "endpoints", "models", "use_cases", "utils", "adapters"]
